# cidv2

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  fly.toml  import_data.py  pyproject.toml  tox.ini
.github/workflows/: fly-deploy.yml  main.yml
.tekton/: cidv2-pull-request.yaml  cidv2-push.yaml
app/: main.py  models.py
cid/: __init__.py  bootstrap.py  config.py  crud.py  database.py  main.py  models.py  utils.py
tests/: conftest.py  test_crud.py  test_main.py  test_utils.py
tests/data/: aws.json  azure.json  google.json
