[tool.poetry]
name = "cidv2"
version = "0.1.0"
description = ""
authors = ["Felix Kolwa <fkolwa@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
uvicorn = "^0.30.1"
pydantic = "^2.7.3"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
