[tool.poetry]
name = "cid"
version = "0.1.0"
description = ""
authors = ["Felix Kolwa <fkolwa@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.111.0"
sqlalchemy = {extras = ["mypy"], version = "^2.0.30"}
uvicorn = "^0.30.1"
pydantic = "^2.7.3"
psycopg2-binary = "^2.9.9"
httpx = "^0.27.0"
schedule = "^1.2.2"
python-dateutil = "^2.9.0-post.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
deptry = "^0.17.0"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
tox = "^4.15.0"
pytest-randomly = "^3.15.0"
pytest-sugar = "^1.0.0"
sqlalchemy-utils = "^0.41.2"
pytest-httpx = "^0.30.0"
types-dateparser = "^1.2.0.20240420"
types-python-dateutil = "^2.9.0.20240316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["cid"]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
# mypy will complain A LOT about sqlalchemy, so we need an extra plugin.
# See https://docs.sqlalchemy.org/en/20/orm/extensions/mypy.html for details.
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=cid", "--cov-report=term-missing", "--cov-report=html"]

[tool.ruff]
target-version = "py37"
line-length = 88
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.poetry.scripts]
populatedb = "cid.bootstrap:populate_db"
